# carteira_auto

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  main-tests.yml  release.yml
claude_code_docs/: ARCHITECTURE.md  CLAUDE.md  DEPENDENCY_GRAPH.mermaid  PATTERNS.md  README.md  plano_implementacao_carteira_auto.md
dashboards/: app.py
dashboards/pages/: 1_allocation.py  2_performance.py  3_risk.py  4_macro.py  5_rebalance.py
data/outputs/portfolios/: Carteira_2026-03-23.xlsx  Carteira_2026-03-24.xlsx
data/raw/: Carteira 2026.xlsx  Carteira 2026_old.xlsx
docs/: README.md  api_reference.md  architecture.md  plano_implementacao_carteira_auto.md  quickstart.md
docs/dev/: ARCHITECTURE.md  DEPENDENCY_GRAPH.mermaid  DEVOPS.md  NEXT_SPRINT.md  PATTERNS.md  README.md  TECH_DEBT_INVENTORY.md
docs/dev/sprints/: sprint-01-bloco-a-review.md
docs/system/: api_reference.md  architecture.md  developer_guide.md  plano_implementacao_carteira_auto.md  quickstart.md
notebooks/: 02_usage_examples.ipynb  demo_fase1.ipynb
notebooks/examples/: 01_macro_brasil.ipynb  02_macro_global.ipynb  03_renda_fixa.ipynb  04_acoes_fundamentos.ipynb  05_portfolio_pipeline.ipynb
notebooks/legacy/: 01_core_internals.ipynb
notebooks/system/: 01_data_flow.ipynb  02_orchestration.ipynb  03_processing.ipynb
src/carteira_auto/: __init__.py  __main__.py  __version__.py
src/carteira_auto/alerts/: __init__.py  channels.py  engine.py  rules.py
src/carteira_auto/analyzers/: __init__.py  commodity_analyzer.py  currency_analyzer.py  economic_sector_analyzer.py  fiscal_analyzer.py  macro_analyzer.py  market_analyzer.py  market_sector_analyzer.py  portfolio_analyzer.py  rebalancer.py  risk_analyzer.py
src/carteira_auto/cli/: __init__.py  commands.py
src/carteira_auto/config/: __init__.py  constants.py  paths.py  settings.py
src/carteira_auto/core/: __init__.py  engine.py  models.py  registry.py  result.py
src/carteira_auto/core/models/: __init__.py  analysis.py  economic.py  portfolio.py
src/carteira_auto/core/nodes/: __init__.py  alert_nodes.py  fetch_helpers.py  ingest_nodes.py  portfolio_nodes.py  storage_nodes.py
src/carteira_auto/core/pipelines/: __init__.py  update_excel_prices.py  update_prices.py
src/carteira_auto/data/exporters/: __init__.py  excel_exporter.py
src/carteira_auto/data/fetchers/: __init__.py  bcb_fetcher.py  cvm_fetcher.py  ddm_fetcher.py  fred_fetcher.py  ibge_fetcher.py  tesouro_fetcher.py  yahoo_fetcher.py
src/carteira_auto/data/fetchers/bcb/: __init__.py  _base.py  _focus.py  _mercado_imobiliario.py  _ptax.py  _sgs.py  _taxajuros.py
src/carteira_auto/data/lake/: __init__.py  base.py  fundamentals_lake.py  macro_lake.py  news_lake.py  price_lake.py  reference_lake.py
src/carteira_auto/data/loaders/: __init__.py  excel_loader.py
src/carteira_auto/data/storage/: __init__.py  snapshot_store.py
src/carteira_auto/utils/: __init__.py  decorators.py  helpers.py  logger.py
tests/: conftest.py
tests/fixtures/: sample_portfolio.xlsx  test_config.yaml
tests/integration/: test_ibge_fetcher_integration.py  test_integrations.py
tests/unit/: test_analyzers.py  test_bcb_fetcher_v2.py  test_cli.py  test_commodity_analyzer.py  test_currency_analyzer.py  test_cvm_fetcher.py  test_ddm_fetcher.py  test_decorators.py  test_fetch_helpers.py  test_fetchers.py  test_fiscal_analyzer.py  test_fred_fetcher.py  test_ibge_fetcher_v2.py  test_ingest_nodes.py  test_lake.py  test_models.py  test_rate_helpers.py  test_reference_lake.py  test_tesouro_fetcher.py
