[project]
name = "carteira_auto"
version = "0.2.1"
description = "Sistema de automação e análise de carteiras de investimentos para emancipação financeira de pessoa física no Brasil"
readme = "README.md"
authors = [
    {name = "Bernardo Galvão", email = "bgalvaods@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Core data
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",

    # Data models & validation
    "pydantic>=2.0.0",

    # HTTP / API
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",

    # Fetchers
    "yfinance>=0.2.28",
    "python-bcb>=0.3.0",
    "sidrapy>=0.1.0",
    "tradingcomdados>=0.4.0",

    # Excel I/O
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",

    # Config
    "python-dotenv>=1.0.0",

    # CLI & Display
    "rich>=13.0.0",

    # Dashboard
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",

    # Code quality
    "black>=23.0.0",
    "ruff>=0.15.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",

    # Type stubs
    "types-requests>=2.31.0",
    "types-beautifulsoup4>=4.12.0",

    # Interactive
    "ipython>=8.39.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.7.0",
]
prod = [
    "gunicorn>=21.0.0",
    "sentry-sdk>=1.35.0",
    "prometheus-client>=0.19.0",
    "schedule>=1.2.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]
# Fases futuras — instalar sob demanda
ml = [
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "pypfopt>=1.5.5",
]
ai = [
    "anthropic>=0.25.0",
    "tiktoken>=0.5.0",
]

[project.scripts]
carteira = "carteira_auto.cli.commands:main"

[project.urls]
Homepage = "https://github.com/begalv/carteira_auto"
Repository = "https://github.com/begalv/carteira_auto.git"
Issues = "https://github.com/begalv/carteira_auto/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["carteira_auto*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ files
# UP007/UP045 (Optional → X | None) breaks Pydantic models where field name shadows type name (e.g. date: date)
"src/carteira_auto/core/models/economic.py" = ["UP007", "UP045"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
    "slow: mark a test as slow",
]

[tool.coverage.run]
source = ["src/carteira_auto"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
